setup the main container

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <!-- Font Roboto Condensed added -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -27,6 +31,9 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p>sdfsfsfsdfdsfsdfsfs fkjsd kdshfjskhfkjshfkjshf ksfhksf</p>
+      <p>wqiuewqu ioeuweoiuwqoeuwqu eowueio wueiouwoueowueo ewqoeuwoeu</p>
+      <h5>fdgfdgfdgfdgfdgfg</h5><p>hakdhsajdhjksah dsakdjhsakjdhjksad</p>
     </main>
 
   </body>
