crafting the form of tweets

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -31,9 +32,18 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>sdfsfsfsdfdsfsdfsfs fkjsd kdshfjskhfkjshfkjshf ksfhksf</p>
-      <p>wqiuewqu ioeuweoiuwqoeuwqu eowueio wueiouwoueowueo ewqoeuwoeu</p>
-      <h5>fdgfdgfdgfdgfdgfg</h5><p>hakdhsajdhjksah dsakdjhsakjdhjksad</p>
+
+      <p>dfdsfdsfsdfdsfsdfsdf dsfdsfsdfdsfsd fdsfsdfsdfsdfds dsfdsfsd</p>
+
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form>
+          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <input type="submit" value="Tweet">
+          <span class="counter">140</span>
+        </form>
+      </section>
+
     </main>
 
   </body>
