step 4 - code review - completed

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -37,7 +41,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      <p>dfdsfdsfsdfdsfsdfsdf dsfdsfsdfdsfsd fdsfsdfsdfsdfds dsfdsfsd</p>
+      <p>
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
@@ -46,6 +50,25 @@
           <input type="submit" value="Tweet">
           <span class="counter"></span>
         </form>
+      </section>
+
+      <section id="allTweets">
+<!--         <article class="tweet">
+          <header>
+            <img class="logo" src="/images/bird.png" width="50px" height="50px">
+            <span class="name">Username</span>
+            <span class="login">@username</span>
+          </header>
+          <p>Little tweet here</p>
+          <footer>
+            <span class="time">10 days ago</span>
+            <span class="icons">
+              <a href="#"><i class="fas fa-flag"></i></a>
+              <a href="#"><i class="fas fa-retweet"></i></a>
+              <a href="#"><i class="fas fa-heart"></i></a>
+            </span>
+          </footer>
+        </article> -->
       </section>
 
     </main>
