jquery, ajax and form validation update

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png" width="80px" height="80px">
       <span class="header">Tweeter</span>
+      <span class="compose"><button><i class="fas fa-pencil-alt"></i> compose</button></span>
     </nav>
 
     <!-- Page-specific (main) content here -->
