--- a/public/index.html
+++ b/public/index.html
@@ -53,24 +53,7 @@
         </form>
       </section>
 
-      <section id="allTweets">
-<!--         <article class="tweet">
-          <header>
-            <img class="logo" src="/images/bird.png" width="50px" height="50px">
-            <span class="name">Username</span>
-            <span class="login">@username</span>
-          </header>
-          <p>Little tweet here</p>
-          <footer>
-            <span class="time">10 days ago</span>
-            <span class="icons">
-              <a href="#"><i class="fas fa-flag"></i></a>
-              <a href="#"><i class="fas fa-retweet"></i></a>
-              <a href="#"><i class="fas fa-heart"></i></a>
-            </span>
-          </footer>
-        </article> -->
-      </section>
+      <section id="allTweets"></section>
 
     </main>
 
