code review - index.html

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
 
       <p>
 
+      <!-- New tweet container -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form>
@@ -53,6 +54,7 @@
         </form>
       </section>
 
+      <!-- List of all tweets container -->
       <section id="allTweets"></section>
 
     </main>
