--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <form>
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
-          <span class="counter"></span>
+          <span class="counter">140</span>
         </form>
       </section>
 
