moment.js to implement user friendly message for time tweet was posted

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,14 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
-
     <!-- Composer Char Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- Composer Char Counter JS -->
+    <script type="text/javascript" src="/scripts/moment.min.js"></script>
+
+    <!-- App JS -->
+    <script type="text/javascript" src="/scripts/app.js"></script>
 
   </head>
 
