added user register and login routes and basicvalidation before create each features

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,12 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png" width="80px" height="80px">
       <span class="header">Tweeter</span>
-      <span class="compose"><button class=compose><i class="fas fa-pencil-alt"></i> compose</button></span>
+      <span class="compose">
+        <button class=newTweet><i class="fas fa-pencil-alt"></i> Compose</button>
+        <button class=register><i class="fas fa-plus"></i> Register</button>
+        <button class=login><i class="fas fa-user"></i> Login</button>
+        <button class=logout><i class="fas fa-times"></i> Logout</button>
+      </span>
     </nav>
 
     <!-- Page-specific (main) content here -->
